--- a/css/update.css
+++ b/css/update.css
@@ -1,1 +1,125 @@
+#navbar ul{
+    display: none;
+    background-color: rgb(115, 17, 196);
+    position: absolute;
+    top: 100%;
+  }
 
+  #navbar li:hover ul { display: block; }
+
+  #navbar, #navbar ul{
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+  }
+
+  #navbar {
+    height: 60px;
+    background-color: #666;
+    padding-left: 500px;
+    min-width: 470px;
+  }
+
+  #navbar li {
+    float: left;
+    position: relative;
+    height: 100%;
+  }
+
+  #navbar li a {
+    display: block;
+    padding: 20px;
+    width: 100px;
+    color: #ffffff;
+    text-decoration: none;
+    text-align: center;
+  }
+
+  #navbar ul li { float: none; }
+
+  #navbar li:hover { background-color: rgb(156, 37, 224); }
+  
+  #navbar ul li:hover { background-color: #666; }
+
+  #navbar {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    border: 3px solid #bdadda;
+    border-radius: 20px 5px;
+    width: 1900px;
+    text-align: center;
+    background-color: #3b3b3b;
+    font-family: 'Arial', 'Verdana', sans-serif;
+    }
+
+      body {
+        background: linear-gradient(to bottom, black, gray);
+        background-size: cover;
+      }
+      
+      h1 {
+        font-family: 'Arial', 'Verdana', sans-serif;
+      }
+
+      .square-block {
+        width:600px; /*ширина */
+        height:300px; /*высота */
+        background:#3b3d3f; /*фоновый цвет*/
+        color:#fff; /*цвет шрифта*/
+        text-align:center; /*выравнивание текста по центру*/
+        text-transform:uppercase; /*написание текста заглавными буквами*/
+        line-height:70px; /*высота строки текста*/
+        float:left;/*обтекане блока по левому краю (при необходимости)*/
+        margin: 200px auto;
+        padding:45px 653px;
+        font-family: 'Arial', 'Verdana', sans-serif;
+        }
+        .scroll-button {
+          color: white;
+          padding: 10px 20px;
+          border: none;
+          cursor: pointer;
+        }
+
+        .square-block2 {
+          width:600px; /*ширина */
+          height:300px; /*высота */
+          background:#3b3d3f; /*фоновый цвет*/
+          color:#fff; /*цвет шрифта*/
+          text-align:center; /*выравнивание текста по центру*/
+          text-transform:uppercase; /*написание текста заглавными буквами*/
+          line-height:70px; /*высота строки текста*/
+          float:left;/*обтекане блока по левому краю (при необходимости)*/
+          margin: 200px auto;
+          padding:45px 653px;
+          font-family: 'Arial', 'Verdana', sans-serif;
+          }
+
+          .square-block3 {
+            width:600px; /*ширина */
+            height:300px; /*высота */
+            background:#3b3d3f; /*фоновый цвет*/
+            color:#fff; /*цвет шрифта*/
+            text-align:center; /*выравнивание текста по центру*/
+            text-transform:uppercase; /*написание текста заглавными буквами*/
+            line-height:70px; /*высота строки текста*/
+            float:left;/*обтекане блока по левому краю (при необходимости)*/
+            margin: 200px auto;
+            padding:45px 653px;
+            font-family: 'Arial', 'Verdana', sans-serif;
+            }
+
+            .square-block4 {
+              width:600px; /*ширина */
+              height:300px; /*высота */
+              background:#3b3d3f; /*фоновый цвет*/
+              color:#fff; /*цвет шрифта*/
+              text-align:center; /*выравнивание текста по центру*/
+              text-transform:uppercase; /*написание текста заглавными буквами*/
+              line-height:70px; /*высота строки текста*/
+              float:left;/*обтекане блока по левому краю (при необходимости)*/
+              margin: 200px auto;
+              padding:45px 653px;
+              font-family: 'Arial', 'Verdana', sans-serif;
+              }
