--- a/css/update.css
+++ b/css/update.css
@@ -1,56 +1,63 @@
 #navbar ul{
     display: none;
-    background-color: rgb(115, 17, 196);
+    background-color: rgb(21, 114, 35);
     position: absolute;
     top: 100%;
+    opacity: 0.5;
   }
 
   #navbar li:hover ul { display: block; }
 
   #navbar, #navbar ul{
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     list-style-type: none;
+    font-weight: bold;
   }
 
   #navbar {
     height: 60px;
-    background-color: #666;
-    padding-left: 500px;
-    min-width: 470px;
+    background-color: #3b3838;
+    padding-left: 200px;
+    min-width: 400px;
   }
 
   #navbar li {
     float: left;
     position: relative;
     height: 100%;
+    padding: 1px;
+    width: 200px;
+    border-radius: 20px;
+    z-index: 1;
   }
 
   #navbar li a {
     display: block;
     padding: 20px;
-    width: 100px;
+    width: 120px;
     color: #ffffff;
     text-decoration: none;
-    text-align: center;
+    z-index: 1;
   }
 
   #navbar ul li { float: none; }
 
-  #navbar li:hover { background-color: rgb(156, 37, 224); }
+  #navbar li:hover { background-color: rgb(22, 161, 62); }
   
-  #navbar ul li:hover { background-color: #666; }
+  #navbar ul li:hover { background-color: rgb(22, 63, 10); }
 
   #navbar {
     margin: 0;
     padding: 0;
     list-style-type: none;
-    border: 3px solid #bdadda;
-    border-radius: 20px 5px;
-    width: 1900px;
+    border: 2px solid rgb(30, 185, 50);
+    border-radius: 20px;
+    width: 1875px;
     text-align: center;
     background-color: #3b3b3b;
     font-family: 'Arial', 'Verdana', sans-serif;
+    z-index: 1;
     }
 
       body {
@@ -63,63 +70,108 @@
       }
 
       .square-block {
-        width:600px; /*ширина */
-        height:300px; /*высота */
+        width:200px; /*ширина */
+        height:900px; /*высота */
         background:#3b3d3f; /*фоновый цвет*/
         color:#fff; /*цвет шрифта*/
         text-align:center; /*выравнивание текста по центру*/
         text-transform:uppercase; /*написание текста заглавными буквами*/
         line-height:70px; /*высота строки текста*/
-        float:left;/*обтекане блока по левому краю (при необходимости)*/
-        margin: 200px auto;
-        padding:45px 653px;
+        float:center;/*обтекане блока по левому краю (при необходимости)*/
+        margin: 400px auto;
+        padding:45px 600px;
         font-family: 'Arial', 'Verdana', sans-serif;
+        position: center;
+        border: 5px solid rgb(13, 94, 13);
         }
-        .scroll-button {
-          color: white;
+
+        .scroll-button2 {
+          color: rgb(250, 250, 250);
           padding: 10px 20px;
           border: none;
           cursor: pointer;
+          border: 5px solid rgb(13, 94, 13);
+          border-radius: 20px;
+          background-color: #053a12;
+          font-weight: bold;
+          font-family: 'Arial', 'Verdana', sans-serif;
+          text-decoration: none;
+
         }
 
         .square-block2 {
-          width:600px; /*ширина */
-          height:300px; /*высота */
+          width:200px; /*ширина */
+          height:900px; /*высота */
           background:#3b3d3f; /*фоновый цвет*/
           color:#fff; /*цвет шрифта*/
           text-align:center; /*выравнивание текста по центру*/
           text-transform:uppercase; /*написание текста заглавными буквами*/
           line-height:70px; /*высота строки текста*/
-          float:left;/*обтекане блока по левому краю (при необходимости)*/
-          margin: 200px auto;
-          padding:45px 653px;
+          float:center;/*обтекане блока по левому краю (при необходимости)*/
+          margin: 400px auto;
+          padding:45px 600px;
           font-family: 'Arial', 'Verdana', sans-serif;
+          position: center;
+          border: 5px solid rgb(13, 94, 13);
           }
 
           .square-block3 {
-            width:600px; /*ширина */
-            height:300px; /*высота */
+            width:200px; /*ширина */
+            height:900px; /*высота */
             background:#3b3d3f; /*фоновый цвет*/
             color:#fff; /*цвет шрифта*/
             text-align:center; /*выравнивание текста по центру*/
             text-transform:uppercase; /*написание текста заглавными буквами*/
             line-height:70px; /*высота строки текста*/
-            float:left;/*обтекане блока по левому краю (при необходимости)*/
-            margin: 200px auto;
-            padding:45px 653px;
+            float:center;/*обтекане блока по левому краю (при необходимости)*/
+            margin: 400px auto;
+            padding:45px 600px;
             font-family: 'Arial', 'Verdana', sans-serif;
+            position: center;
+            border: 5px solid rgb(13, 94, 13);
             }
 
             .square-block4 {
-              width:600px; /*ширина */
-              height:300px; /*высота */
+              width:200px; /*ширина */
+              height:900px; /*высота */
               background:#3b3d3f; /*фоновый цвет*/
               color:#fff; /*цвет шрифта*/
               text-align:center; /*выравнивание текста по центру*/
               text-transform:uppercase; /*написание текста заглавными буквами*/
               line-height:70px; /*высота строки текста*/
-              float:left;/*обтекане блока по левому краю (при необходимости)*/
-              margin: 200px auto;
-              padding:45px 653px;
+              float:center;/*обтекане блока по левому краю (при необходимости)*/
+              margin: 400px auto;
+              padding:45px 600px;
               font-family: 'Arial', 'Verdana', sans-serif;
+              position: center;
+              border: 5px solid rgb(13, 94, 13);
               }
+h11 {
+  font-family: 'Arial', 'Verdana', sans-serif;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 5em;
+  padding-left: 900px;
+  display: inline-block;
+  transform: translate(-3em, 1em);
+  border: 1px solid rgb(255, 255, 255);
+  background-image: linear-gradient(to bottom, #053a12, rgb(10, 24, 3));
+  font-weight: bold;
+  z-index: 2;
+}
+  .blockOpis {
+    width:590px; /*ширина */
+    height:120px; /*высота */
+    background:#3b3d3f; /*фоновый цвет*/
+    color:#fff; /*цвет шрифта*/
+    float:right;
+    margin: 100px;
+    font-family: 'Arial', 'Verdana', sans-serif;
+    position: center;
+    border: 2px solid rgb(250, 250, 250);
+    padding-bottom:88px;
+    padding-left:10px;
+    padding-right:37px;
+    padding-top:10px;
+    transform: translate(-30em, 1em);
+    }
