--- a/css/update.css
+++ b/css/update.css
@@ -96,7 +96,6 @@
           font-weight: bold;
           font-family: 'Arial', 'Verdana', sans-serif;
           text-decoration: none;
-
         }
 
         .square-block2 {
@@ -179,4 +178,21 @@ h11 {
 body {
   background: url(../image/3.jpg);
   background-repeat: repeat;
+}
+
+.blocknew1{
+  width:145px; /*ширина */
+  height:2px; /*высота */
+  border: 1px solid rgb(255, 255, 255);
+  transform: translate(45em, 40em);
+  background-color: #064927;
+  padding: 10px 130px 25px;
+  border-radius: 15px;
+}
+
+.scroll-button{
+  font-family: 'Arial', 'Verdana', sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+  color: #fff;
 }
