--- a/css/update.css
+++ b/css/update.css
@@ -1,9 +1,10 @@
 #navbar ul{
   display: none;
-  background-color: rgb(21, 114, 35);
+  background-color: rgba(21, 114, 35, 0.74);
   position: absolute;
   top: 100%;
-  opacity: 0.5;
+  opacity: 0.7;
+  
 }
 
 #navbar li:hover ul { display: block; }
@@ -13,6 +14,8 @@
   padding: 0px;
   list-style-type: none;
   font-weight: bold;
+  border-radius: 20px;
+ 
 }
 
 #navbar {
@@ -20,6 +23,7 @@
   background-color: #3b3838;
   padding-left: 200px;
   min-width: 400px;
+
 }
 
 #navbar li {
@@ -30,6 +34,7 @@
   width: 200px;
   border-radius: 20px;
   z-index: 1;
+
 }
 
 #navbar li a {
@@ -39,19 +44,20 @@
   color: #ffffff;
   text-decoration: none;
   z-index: 1;
+  
 }
 
 #navbar ul li { float: none; }
 
-#navbar li:hover { background-color: rgb(22, 161, 62); }
+#navbar li:hover { background-color: rgb(31, 114, 55); }
   
-#navbar ul li:hover { background-color: rgb(22, 63, 10); }
+#navbar ul li:hover { background-color: rgb(23, 61, 12); }
 
 #navbar {
   margin: 0;
   padding: 0;
   list-style-type: none;
-  border: 2px solid rgb(30, 185, 50);
+  border: 2px solid rgb(28, 139, 43);
   border-radius: 20px;
   width: 1875px;
   text-align: center;
@@ -59,16 +65,7 @@
   font-family: 'Arial', 'Verdana', sans-serif;
   z-index: 1;
 }
-
-body {
-  background: linear-gradient(to bottom, black, gray);
-  background-size: cover;
-}
-      
-h1 {
-  font-family: 'Arial', 'Verdana', sans-serif;
-}
-
+   
 .square-block {
   width:1200px; /*ширина */
   height:900px; /*высота */
@@ -80,18 +77,7 @@ h1 {
   font-family: 'Arial', 'Verdana', sans-serif;
   border: 5px solid rgb(13, 94, 13);
   font-size: 1.2em;
-  text-shadow: 0.1em 0 #212121
-}
-
-.scroll-button2 {
-  color: rgb(250, 250, 250);
-  padding: 10px 20px;
-  border: 3px solid rgb(13, 94, 13);
-  border-radius: 20px;
-  background-color: #053a12;
-  font-weight: bold;
-  font-family: 'Arial', 'Verdana', sans-serif;
-  text-decoration: none;
+  text-shadow: 0.1em 0 #212121;
 }
 
 .square-block2 {
@@ -148,6 +134,16 @@ h11 {
   background-image: linear-gradient(to bottom, #053a12, rgb(10, 24, 3));
   font-weight: bold;
   z-index: 2;
+  box-shadow: 0 0 0 0 rgba(10, 66, 4, 0.5); /* начальное значение тени - без обводки */
+  transition: box-shadow 0.2s ease-in-out; 
+}
+
+h11:hover {
+  box-shadow: 0 0 20px 10px rgba(0, 255, 21, 0.5); /* изменяем тень для создания обводки */
+}
+
+.blockOpis:hover {
+  box-shadow: 0 0 20px 10px rgba(255, 255, 255, 0.5); /* изменяем тень для создания обводки */
 }
 
 .blockOpis {
@@ -159,13 +155,20 @@ h11 {
   margin: 100px;
   font-family: 'Arial', 'Verdana', sans-serif;
   position: center;
-  border: 2px solid rgb(250, 250, 250);
   padding-bottom:88px;
   padding-left:10px;
   padding-right:37px;
   padding-top:10px;
+  border: 1px solid rgb(255, 255, 255);
   transform: translate(-30em, 1em);
+  box-shadow: 0 0 0 0 rgba(10, 66, 4, 0.5); /* начальное значение тени - без обводки */
+  transition: box-shadow 0.2s ease-in-out; 
 }
+
+.scroll-button:hover {
+  transform: scale(1.1);
+}
+
 
 body {
   background: url(../image/3.jpg);
@@ -180,6 +183,21 @@ body {
   background-color: #064927;
   padding: 10px 130px 25px;
   border-radius: 15px;
+  box-shadow: 0 0 0 0 rgba(10, 66, 4, 0.5); /* начальное значение тени - без обводки */
+  transition: box-shadow 0.2s ease-in-out; 
+}
+
+.blocknew1:hover{
+  box-shadow: 0 0 20px 10px rgba(26, 184, 12, 0.705); /* изменяем тень для создания обводки */
+}
+
+.fototop{
+  box-shadow: 0 0 0 0 rgba(10, 66, 4, 0.5); /* начальное значение тени - без обводки */
+  transition: box-shadow 0.2s ease-in-out; 
+}
+
+.fototop:hover{
+  box-shadow: 0 0 20px 10px rgba(26, 184, 12, 0.705); /* изменяем тень для создания обводки */
 }
 
 .scroll-button{
@@ -189,9 +207,41 @@ body {
   color: #fff;
 }
 
+.scroll-button2 {
+  color: rgb(250, 250, 250);
+  padding: 8px 15px;
+  border: 1px solid rgb(250, 250, 250);
+  border-radius: 15px;
+  background-color: #11471e;
+  font-weight: bold;
+  font-family: 'Arial', 'Verdana', sans-serif;
+  text-decoration: none;
+  box-shadow: 0 0 0 0 rgba(11, 58, 6, 0.5); /* начальное значение тени - без обводки */
+  transition: box-shadow 0.2s ease-in-out; 
+}
+
+.scroll-button2:hover{
+  box-shadow: 0 0 20px 10px rgba(21, 133, 11, 0.705); /* изменяем тень для создания обводки */
+}
+
+.scroll-button3{
+  font-family: 'Arial', 'Verdana', sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+  color: #fff;
+  
+}
+
 .leftfoto{
   width: 400px;
   border: 2px solid rgb(255, 255, 255);
   float:right;
   margin: 0px 10px 0px 0px;
+  box-shadow: 0 0 0 0 rgba(10, 66, 4, 0.5); /* начальное значение тени - без обводки */
+  transition: box-shadow 0.2s ease-in-out; 
 }
+
+.leftfoto:hover{
+  box-shadow: 0 0 20px 10px rgba(26, 184, 12, 0.705); /* изменяем тень для создания обводки */
+}
+
